[gd_scene load_steps=8 format=3 uid="uid://byyrobuubiugt"]

[ext_resource type="Script" path="res://playerdummy.gd" id="1_5hnea"]
[ext_resource type="Texture2D" uid="uid://b7ksjno8lupro" path="res://assets/dummy.png" id="2_qie2s"]
[ext_resource type="FontFile" uid="uid://dhoipivpdsyok" path="res://Fonts/ThaleahFat.ttf" id="3_bqgf4"]
[ext_resource type="AudioStream" uid="uid://8cb6a0w3uglj" path="res://audio/sound effects/HitSound.mp3" id="4_6tosg"]

[sub_resource type="SpriteFrames" id="SpriteFrames_wf06g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_qie2s")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_skxyc"]
size = Vector2(10, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3gdp1"]
size = Vector2(12, 16)

[node name="dummy" type="CharacterBody2D" groups=["Dummies"]]
visible = false
z_index = 3
collision_mask = 5
script = ExtResource("1_5hnea")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wf06g")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_skxyc")

[node name="StunTimers" type="Node" parent="."]

[node name="HitstunTimer" type="Timer" parent="StunTimers"]
wait_time = 0.5

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_3gdp1")

[node name="PlayerHealth" type="Label" parent="."]
offset_left = -18.0
offset_top = 8.0
offset_right = 306.998
offset_bottom = 251.0
scale = Vector2(0.113045, 0.113045)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 30
theme_override_constants/shadow_outline_size = 40
theme_override_fonts/font = ExtResource("3_bqgf4")
theme_override_font_sizes/font_size = 100
text = "0
"
horizontal_alignment = 1

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_6tosg")
volume_db = 2.0
pitch_scale = 1.26
bus = &"Attack Sound Effects"

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="ImmunityTimer" type="Timer" parent="."]
wait_time = 0.28

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
[connection signal="timeout" from="ImmunityTimer" to="." method="_on_immunity_timer_timeout"]
